# custom_gammainc

./: README.md  pyproject.toml
src/gammainc/: __init__.py  benchmark_script.py  cleaned_up.py  custom_upper_inc_gamma.py  handle_jit_disabled_bug.py  schechter_fit_numpyro_jax.ipynb
tests/: test_upper_inc_gamma.py
